Fix overflow

--- a/frontend/src/modules/entity-detail/styles.scss
+++ b/frontend/src/modules/entity-detail/styles.scss
@@ -73,6 +73,7 @@
     .owned-resources-wrapper {
       margin-bottom: 20px;
       margin-top: 20px;
+      overflow: hidden;
       .ant-card {
         padding: 0 !important;
         .ant-card-body {
